# mvp-audio

./: Cargo.toml  pnpm-lock.yaml
apps/desktop/: package.json
apps/desktop/src/: routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/main/sidebar/: index.tsx
apps/desktop/src/components/main/sidebar/dictation-history/: index.tsx
apps/desktop/src/components/main/sidebar/dictionary/: index.tsx
apps/desktop/src/contexts/: dictation.tsx
apps/desktop/src/routes/app/: floating-bar.tsx  route.tsx
apps/desktop/src/store/zustand/dictation/: index.ts
plugins/dictation/: Cargo.toml  build.rs  package.json
plugins/dictation/js/: bindings.gen.ts
plugins/dictation/permissions/autogenerated/: reference.md
plugins/dictation/permissions/autogenerated/commands/: cancel_dictation.toml  get_dictation_state.toml  start_dictation.toml  stop_dictation.toml
plugins/dictation/permissions/schemas/: schema.json
plugins/dictation/src/: commands.rs  error.rs  events.rs  ext.rs  lib.rs  state.rs
plugins/hotkeys/: Cargo.toml  build.rs  package.json
plugins/hotkeys/js/: bindings.gen.ts
plugins/hotkeys/permissions/autogenerated/: reference.md
plugins/hotkeys/permissions/autogenerated/commands/: get_registered_hotkeys.toml
plugins/hotkeys/permissions/schemas/: schema.json
plugins/hotkeys/src/: commands.rs  events.rs  lib.rs  listener.rs  state.rs
plugins/paste/: Cargo.toml  build.rs  package.json
plugins/paste/js/: bindings.gen.ts
plugins/paste/permissions/autogenerated/: reference.md
plugins/paste/permissions/autogenerated/commands/: get_clipboard_text.toml  set_clipboard_text.toml
plugins/paste/permissions/schemas/: schema.json
plugins/paste/src/: clipboard.rs  commands.rs  keyboard.rs  lib.rs
plugins/windows/js/: bindings.gen.ts
plugins/windows/src/: commands.rs  lib.rs
plugins/windows/src/window/: v1.rs
