[package]
name = "tauri-plugin-dictation"
version = "0.1.0"
authors = ["You"]
edition = "2021"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-dictation"
description = "Quick dictation plugin for voice-to-text with text injection"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
hypr-audio = { workspace = true }
hypr-audio-device = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-language = { workspace = true }

owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }

tauri-plugin-settings = { workspace = true }

tauri = { workspace = true, features = ["specta"] }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
