[package]
name = "tauri-plugin-hotkeys"
version = "0.1.0"
authors = ["You"]
edition = "2021"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-hotkeys"
description = "Global hotkeys plugin for system-wide keyboard shortcuts"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["specta"] }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

rdev = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
