[package]
name = "tauri-plugin-paste"
version = "0.1.0"
authors = ["You"]
edition = "2021"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-paste"
description = "Text injection plugin for pasting text into any app"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["specta"] }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSPasteboard", "NSPasteboardItem"] }
objc2-foundation = { workspace = true, features = ["NSString", "NSArray"] }
objc2-core-graphics = { workspace = true, features = ["CGEvent", "CGEventTypes"] }
